Update to Groovy 4 to support Java 17 builds